Fixed UserPrederence tests